# ALSEDFS2020

./: Base_de_datos  Base_de_datos.sqbpro  README.md
Proyecto_definitivo/: CMakeLists.txt  base_de_datos.cpp  base_de_datos.h  crear_pac.cpp  crear_pac.h  crear_pac.ui  crear_usr.cpp  crear_usr.h  crear_usr.ui  datosentrada_sesion_usr.cpp  datosentrada_sesion_usr.ui  inicio_o_crear_usr.ui  main.cpp  opciones_deusr.cpp  opciones_deusr.h  ventana_de_juego.cpp  ventana_de_juego.h
Proyecto_definitivo/build-Proyecto_definitivo-Desktop-Debug/: CMakeCache.txt  Makefile  Proyecto_definitivo  moc_datosentrada_sesion_usr.cpp  moc_inicio_o_crear_usr.cpp
Proyecto_definitivo/build-Proyecto_definitivo-Desktop-Debug/Proyecto_definitivo_autogen/: mocs_compilation.cpp
Proyecto_definitivo/build-Proyecto_definitivo-Desktop-Debug/Proyecto_definitivo_autogen/EWIEGA46WW/: moc_crear_pac.cpp  moc_crear_usr.cpp  moc_inicio_o_crear_usr.cpp  moc_opciones_deusr.cpp  moc_ventana_de_juego.cpp
Proyecto_definitivo/build-Proyecto_definitivo-Desktop-Debug/Proyecto_definitivo_autogen/include/: ui_crear_pac.h  ui_crear_usr.h  ui_datosentrada_sesion_usr.h  ui_inicio_o_crear_usr.h  ui_opciones_deusr.h
Proyecto_definitivo_2.0/: CMakeLists.txt  Proyecto_definitivo.pro  base_de_datos.cpp  base_de_datos.h  main.cpp  (+22 more)
Proyecto_definitivo_3.0/: CMakeLists.txt  base_de_datos.cpp  base_de_datos.h  crear_pac.cpp  crear_pac.h  crear_usr.cpp  crear_usr.h  datosentrada_sesion_usr.cpp  datosentrada_sesion_usr.h  datosentrada_sesion_usr.ui  filtro1_ni.cpp  filtro1_ni.h  main.cpp  opciones_deusr.cpp  opciones_deusr.ui  scores.cpp  scores.h  scores.ui  ven_crono.cpp  ven_crono.h  ven_crono.ui  ven_game.cpp  ven_game.cpp.autosave  ven_game.h  ven_game.ui
Proyecto_definitivo_3.0/build-Proyecto_definitivo-Desktop-Debug/: CMakeCache.txt  Makefile  formulario_usr  moc_ventana_de_juego.cpp  ui_datosentrada_sesion_usr.h  ui_ventana_de_juego.h
Proyecto_definitivo_3.0/build-Proyecto_definitivo-Desktop-Debug/Proyecto_definitivo_2_autogen/EWIEGA46WW/: moc_crear_usr.cpp  moc_opciones_deusr.cpp
Proyecto_definitivo_3.0/build-Proyecto_definitivo-Desktop-Debug/Proyecto_definitivo_2_autogen/include/: ui_crear_pac.h  ui_datosentrada_sesion_usr.h
Proyecto_definitivo_3.0/build-Proyecto_definitivo-Desktop-Debug/Proyecto_definitivo_autogen/EWIEGA46WW/: moc_crear_pac.cpp  moc_filtro1_ni.cpp  moc_ven_crono.cpp
proyecto-4.0/Proyecto3/: CMakeLists.txt  Proyecto3.pro  base_da.cpp  base_da.h  conectardb.cpp  conectardb.h  filtro.cpp  filtro.h  filtro.ui  inicio.cpp  inicio.h  inicio.ui  juego.cpp  juego.h  juego.ui  main.cpp  opciones.cpp  opciones.h  opciones.ui  registro_paci.cpp  registro_paci.h  registro_paci.ui  registro_usr.cpp  registro_usr.h  resultados.cpp  resultados.h  resultados.ui
(+159 files in other folders)
